fix overflow in small screen

--- a/portfolio/src/components/components.css
+++ b/portfolio/src/components/components.css
@@ -111,6 +111,11 @@
     border-radius: 15px;
     background-color: rgba(255, 255, 255, 0.562);
 }
+
+.ant-card-head-title {
+    white-space: unset;
+}
+
 #footer {
     bottom: 0;
     position: relative;
